--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "uni-preset-vue",
   "version": "0.0.0",
   "scripts": {
+    "dev": "pnpm dev:mp-weixin",
+    "build": "pnpm build:mp-weixin",
     "dev:app": "uni -p app",
     "dev:app-android": "uni -p app-android",
     "dev:app-ios": "uni -p app-ios",
@@ -59,7 +61,8 @@
     "@dcloudio/uni-mp-xhs": "3.0.0-4020420240722002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4020420240722002",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.1.9"
+    "vue-i18n": "^9.1.9",
+    "wot-design-uni": "^1.3.6"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
@@ -67,9 +70,15 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4020420240722002",
     "@dcloudio/uni-stacktracey": "3.0.0-4020420240722002",
     "@dcloudio/vite-plugin-uni": "3.0.0-4020420240722002",
-    "@vue/tsconfig": "^0.1.3",
+    "@uni-helper/unocss-preset-uni": "^0.2.9",
     "@vue/runtime-core": "^3.4.21",
+    "@vue/tsconfig": "^0.1.3",
+    "sass": "^1.77.8",
     "typescript": "^4.9.4",
+    "unocss": "^0.61.9",
+    "unocss-applet": "^0.8.2",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
   }
