--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4020420240722002",
     "@dcloudio/uni-stacktracey": "3.0.0-4020420240722002",
     "@dcloudio/vite-plugin-uni": "3.0.0-4020420240722002",
+    "@iconify/vue": "^4.1.2",
     "@uni-helper/unocss-preset-uni": "^0.2.9",
+    "@uni-helper/vite-plugin-uni-components": "^0.0.9",
     "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "sass": "^1.77.8",
@@ -78,7 +80,6 @@
     "unocss": "^0.61.9",
     "unocss-applet": "^0.8.2",
     "unplugin-auto-import": "^0.18.2",
-    "unplugin-vue-components": "^0.27.3",
     "vite": "5.2.8",
     "vue-tsc": "^1.0.24"
   }
