--- a/package.json
+++ b/package.json
@@ -77,10 +77,11 @@
     "@vue/tsconfig": "^0.1.3",
     "sass": "^1.77.8",
     "typescript": "^4.9.4",
-    "unocss": "^0.61.9",
+    "unocss": "^0.58.9",
     "unocss-applet": "^0.8.2",
     "unplugin-auto-import": "^0.18.2",
     "vite": "5.2.8",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^1.0.24"
   }
 }
