--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4020420240722002",
     "@dcloudio/uni-mp-xhs": "3.0.0-4020420240722002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4020420240722002",
+    "luch-request": "^3.1.1",
     "vue": "^3.4.21",
     "vue-i18n": "^9.1.9",
     "wot-design-uni": "^1.3.6"
