--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "@vue/tsconfig": "^0.1.3",
     "sass": "^1.77.8",
     "typescript": "^4.9.4",
+    "uni-mini-router": "^0.1.6",
+    "uni-parse-pages": "^0.0.1",
     "unocss": "^0.58.9",
     "unocss-applet": "^0.8.2",
     "unplugin-auto-import": "^0.18.2",
